--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-hello world
+<!DOCTYPE HTML>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Phanindra Veera @ factsfinder</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+</head>
+
+<body>
+
+    <div class="container-full main">
+
+        <div class="header">
+            <center>
+                <h1>Phanindra Veera</h1>
+                <h3>{ Coder & Inventor }</h3>
+
+                <div class="social-icons">
+                    <a class="btn btn-social-icon btn-github" href="https://github.com/factsfinder">
+                        <span class="fa fa-github fa-2x"></span></a>
+
+                    <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/factsfinder"><span class="fa fa-twitter fa-2x"></span></a>
+
+                    <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/phanindraveera"><span class="fa fa-linkedin fa-2x"></span></a>
+
+                    <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/veerasumanth"><span class="fa fa-facebook fa-2x"></span></a>
+                </div>
+            </center>
+        </div>
+        <!-- Just the Header Title and Tagline -->
+
+        <div class="container"><hr></div>
+
+        <div class="container-full content-main">
+
+            <div class="container intro">
+                <p>holla mine own nameth is Phanindra Veera. I'm a CS graduate student at Fairleigh Dickinson University. I'm a Programmer, Writer, Learner, and future Inventor who always follow this simple motto => Think, Plan, and Do..!</p>
+            </div>
+
+            <center>
+                <div class="container row blocks">
+                    <div class="col-md-3">
+                        <div class="block b1">
+                            <h1 style="text-align:center"><a href="#">About</a></h1>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="block b2">
+                            <h1 style="text-align:center"><a href="#">Blog</a></h1>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="block b2">
+                            <h1 style="text-align:center"><a href="#">Projects</a></h1>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="block b4">
+                            <h1 style="text-align:center"><a href="#">Resume</a></h1>
+                        </div>
+                    </div>
+
+
+                </div>
+            </center>
+
+            <center>
+                <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
+                <p>Designed By Phanindra Veera</a>
+                </p>
+
+            </center>
+
+
+        </div>
+        <!--Content-Main-->
+
+
+
+
+
+
+
+
+
+    </div>
+    <!--Main -->
+
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/jquery"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+
+</body>
+
+</html>
