--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container-full content-main">
 
             <div class="container intro">
-                <p>holla mine own nameth is Phanindra Veera. I'm a CS graduate student at Fairleigh Dickinson University. I'm a Programmer, Writer, Learner, and future Inventor who always follow this simple motto => Think, Plan, and Do..!</p>
+                <p>holla mine own nameth is Phanindra Veera. I'm a CS graduate student at Fairleigh Dickinson University. I'm a Programmer, Writer, Learner, and future Inventor and always follows this simple motto => Think, Plan, and Do..!</p>
             </div>
 
             <center>
