--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="block b4">
-                            <h1 style="text-align:center"><a href="https://drive.google.com/file/d/0B-EUZmMiISlzb0lReUtLWVJmdms/view?usp=sharing">Resume</a></h1>
+                            <h1 style="text-align:center"><a href="https://drive.google.com/file/d/0B-EUZmMiISlzb0lReUtLWVJmdms/view?usp=sharing" target="_blank">Resume</a></h1>
                         </div>
                     </div>
 
