--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="content-main">
 
             <div class="container intro">
-                <p>holla mine own nameth is Phanindra Veera. I'm a CS graduate student at Fairleigh Dickinson University. I'm a Programmer, Writer, Learner, and future Inventor and always follows this simple motto => Think, Plan, and Do..!</p>
+                <p>holla mine own nameth is Phanindra Veera. I'm a CS graduate student at Fairleigh Dickinson University.</p>
             </div>
 
             <center>
