--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <header>
            <center>
                 <h1><a href="https://factsfinder.me">Phanindra Veera</a></h1>
-                <h3>{ Coder & Inventor }</h3>
+                <h3>{ Not Yet Another Average Human }</h3>
 
                 <div class="social-icons">
                     <a class="btn btn-social-icon btn-github" href="https://github.com/factsfinder">
