--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="container row blocks">
                     <div class="col-md-4">
                         <div class="block b2">
-                            <h1 style="text-align:center"><a href="#">Blog</a></h1>
+                            <h1 style="text-align:center"><a href="#">Blog<br>Under Construction</a></h1>
                         </div>
                     </div>
 
