--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div class="col-md-4">
                         <div class="block b2">
-                            <h1 style="text-align:center"><a href="#">Projects</a></h1>
+                            <h1 style="text-align:center"><a href="#">Projects<span style="font-size:15px;">Under Construction</span></a></h1>
                         </div>
                     </div>
                     
