--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     
                     <div class="col-md-4">
                         <div class="block b4">
-                            <h1 style="text-align:center"><a href="https://drive.google.com/file/d/0B-EUZmMiISlzdXE3R0xNcUdYOUU/view?usp=sharing" target="_blank">Resume</a></h1>
+                            <h1 style="text-align:center"><a href="https://drive.google.com/file/d/0B-EUZmMiISlzdXE3R0xNcUdYOUU/view?usp=sharing">Resume</a></h1>
                         </div>
                     </div>
                 </div>
