--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <div class="col-md-4">
                         <div class="block b2">
-                            <h1 style="text-align:center"><a href="#">Projects<span style="font-size:15px;">Under Construction</span></a></h1>
+                            <h1 style="text-align:center"><a href="projects.html">Projects<span style="font-size:15px;">Under Construction</span></a></h1>
                         </div>
                     </div>
                     
@@ -71,7 +71,7 @@
         <footer>
             <center>
                 <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
-                <p>Designed By Phanindra Veera</a>
+                <p>Designed By Phanindra Veera
                 </p>
             </center>
         </footer>
