--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,7 @@
                 </div>
       </center>
        </header>
+        <center><h3>Projects So Far...!</h3></center>
         <div class="container"><hr></div>
         
         <div class="content-main">
