--- a/projects.html
+++ b/projects.html
@@ -80,13 +80,15 @@
                     </div>
                 </div>
             </center>
+            <div class="container"><hr></div>
+            <br>
              <footer>
          <center>
                 <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
                 <p>Designed By Phanindra Veera
                 </p>
            </center>
-                 <br><br>
+                
         </footer>
         </div>
        </div> 
