A few more simple changes to the homepage

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
         <div class="content-main">
 
             <div class="container intro">
-                <p>holla mine own nameth is Phanindra Veera. I'm a CS graduate student at Fairleigh Dickinson University.</p>
+                <p>holla mine own nameth is Phanindra Veera.
+                  I'm a CS graduate student at Fairleigh Dickinson University.
+                  I'm a Programmer/Coder, wannabe Inventor (I really do and I will), Future's Richest Man of Earth (Yes).
+                  I'm also an Optimistic Nice Guy and sometimes Realistic Reasonable Guy.</p>
             </div>
 
             <center>
@@ -56,7 +59,7 @@
 
                     <div class="col-md-4">
                         <div class="block b2">
-                            <h1 style="text-align:center"><a href="projects.html">Projects<span style="font-size:15px;">Under Construction</span></a></h1>
+                            <h1 style="text-align:center"><a href="projects.html">Projects</a></h1>
                         </div>
                     </div>
 
