--- a/projects.html
+++ b/projects.html
@@ -234,7 +234,7 @@
 
                 </div>
             </div>
-            <div class="container">
+            <div class="container-fluid">
                 <hr>
             </div>
 
