--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="container intro">
                 <p>holla mine own nameth is Phanindra Veera.
                   I'm a CS graduate student at Fairleigh Dickinson University.
-                  I'm a Programmer/Coder, wannabe Inventor (I really do and I will), Future's Richest Man of Earth (Yes).
-                  I'm also an Optimistic Nice Guy and sometimes Realistic Reasonable Guy.</p>
+                  I'm a Programmer/Coder, wannabe Inventor, Future's Richest Man on Earth (Yes).
+                  I'm Nicely Optimistic and also Resonably Realistic.</p>
             </div>
 
             <center>
