A few more changes

--- a/projects.html
+++ b/projects.html
@@ -44,49 +44,25 @@
 
             <div class="row projects">
 
+              <!-- Flappy Bird blone block and project description Modal -->
                 <div class="col-md-4">
                     <div class="proj_block">
                     <h1 style="text-align:center"><a href="#" data-toggle="modal" data-target="#flappy-bird">Flappy Bird Clone</a></h2>
                     </div>
                 </div>
 
-                <!-- Flappy Bird project description Modal -->
                 <div id="flappy-bird" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                         <!-- Modal content-->
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Flappy Bird Clone</h4>
+                                <h3 class="modal-title">Flappy Bird Clone</h3>
+                                <br>
+                                <h4>Personal Project (September 2016)</h4>
                             </div>
                             <div class="modal-body">
-                                <p>Description comes here</p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="proj_block">
-                        <h1 style="text-align:center"><a href="#plethysmograph" data-toggle="modal">Plethysmograph</a></h1>
-                    </div>
-                </div>
-
-                <!-- Plethysmograph project description Modal -->
-                <div id="plethysmograph" class="modal fade" role="dialog">
-                    <div class="modal-dialog">
-                        <!-- Modal content-->
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Plethysmograph</h4>
-                            </div>
-                            <div class="modal-body">
-                                <p>Description comes here</p>
+                                <p class="lead">An exact Flappy Bird Clone programmed from scratch using Java programming language and LibGDX framework. <br> Check the source code on my <a href="https://github.com/factsfinder/Flappy_Bird_Clone">github</a></p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -97,44 +73,42 @@
                 </div>
 
 
+
+                <!-- Twitter GOP Sentiment Analysis block and project description Modal -->
                 <div class="col-md-4">
                     <div class="proj_block">
                         <h1 style="text-align:center"><a href="#twitter-gop" data-toggle="modal">Twitter GOP Sentiment</a></h1>
                     </div>
                 </div>
-            </div>
 
-            <!-- Twitter GOP Sentiment project description Modal -->
-            <div id="twitter-gop" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Twitter Gop Sentiment Analysis</h4>
+
+                <div id="twitter-gop" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">Twitter Gop Sentiment Analysis</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Description comes here</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
                         </div>
-                        <div class="modal-body">
-                            <p>Description comes here</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
+
                     </div>
-
                 </div>
-            </div>
 
-            <br>
 
-            <div class="row projects">
-
+                  <!-- Donald Cloud block and project description Modal -->
                 <div class="col-md-4">
                     <div class="proj_block">
                         <h1 style="text-align:center"><a href="#donald-cloud" data-toggle="modal">Donald Cloud</a></h1>
                     </div>
                 </div>
 
-                <!-- Donald Cloud project description Modal -->
                 <div id="donald-cloud" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                         <!-- Modal content-->
@@ -154,23 +128,60 @@
                     </div>
                 </div>
 
+            </div>
+
+
+            <br>
+
+            <div class="row projects">
+              <!-- FactsnFakes project description Modal -->
+              <div class="col-md-4">
+                  <div class="proj_block">
+                      <h1 style="text-align:center"><a href="#factsnfakes" data-toggle="modal">Facts`n`Fakes</a></h1>
+                  </div>
+              </div>
+
+              <div id="factsnfakes" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                          <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              <h4 class="modal-title">Facts`n`Fakes</h4>
+                          </div>
+                          <div class="modal-body">
+                              <p>Description comes here</p>
+                          </div>
+                          <div class="modal-footer">
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          </div>
+                      </div>
+
+                  </div>
+              </div>
+
+
+                  <!-- Ping Pong block and  project description Modal -->
                 <div class="col-md-4">
                     <div class="proj_block">
                         <h1 style="text-align:center"><a href="#ping-pong" data-toggle="modal">Ping Pong Game</a></h1>
                       </div>
                 </div>
 
-                <!-- Flappy Bird project description Modal -->
                 <div id="ping-pong" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                         <!-- Modal content-->
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Simple Ping Pong Game</h4>
+                                <h3 class="modal-title">Simple Ping Pong Game</h3>
+                                <br>
+                                <h4>Personal Project (2016)</h4>
                             </div>
                             <div class="modal-body">
-                                <p>Description comes here</p>
+                                <p class="lead">This is a simple Ping Pong game coded using Vanilla Javascript and HTML5 Canvas API</p>
+                                <p class="lead">View the source code on <a href="https://github.com/factsfinder/pingpong">github</a></p>
+
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -180,32 +191,39 @@
                     </div>
                 </div>
 
+                <!-- Plethysmograph project description Modal -->
                 <div class="col-md-4">
                     <div class="proj_block">
-                        <h1 style="text-align:center"><a href="#factsnfakes" data-toggle="modal">FactsnFakes</a></h1>
+                        <h1 style="text-align:center"><a href="#plethysmograph" data-toggle="modal">Plethysmograph</a></h1>
                     </div>
                 </div>
-            </div>
 
-            <!-- FactsnFakes project description Modal -->
-            <div id="factsnfakes" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">FactsnFakes</h4>
+                <div id="plethysmograph" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h3 class="modal-title">Plethysmograph</h3>
+                                <br>
+                                <h4>Undergraduate Project (Jan-April 2014)</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p class="lead">Plethysmograph is a Heart Rate Monitoring Device programmed using embedded c in 8051.</p>
+                                  <p class="lead">Good News: It is a team project and my role involves programming the device.</p>
+                                  <p class="lead">Bad News: I lost the files :(</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
                         </div>
-                        <div class="modal-body">
-                            <p>Description comes here</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
+
                     </div>
-
                 </div>
+
             </div>
+
+
             <br>
             <div class="row projects">
               <div class="col-md-4">
