--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p>holla mine own nameth is Phanindra Veera.
                   I'm a CS graduate student at Fairleigh Dickinson University.
                   I'm a Programmer/Coder, wannabe Inventor, Future's Richest Man on Earth (Yes).
-                  I'm Nicely Optimistic and also Resonably Realistic.</p>
+                  I'm Overly Optimistic and also Resonably Realistic.</p>
             </div>
 
             <center>
