finished projects page for now

--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
                 <!-- Twitter GOP Sentiment Analysis block and project description Modal -->
                 <div class="col-md-4">
                     <div class="proj_block">
-                        <h1 style="text-align:center"><a href="#twitter-gop" data-toggle="modal">Twitter GOP Sentiment</a></h1>
+                        <h1 style="text-align:center"><a href="#twitter-gop" data-toggle="modal">Twitter GOP Sentiment Analysis</a></h1>
                     </div>
                 </div>
 
@@ -88,10 +88,13 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Twitter Gop Sentiment Analysis</h4>
+                                <h3 class="modal-title">Twitter Gop Sentiment Analysis</h3>
+                                <br>
+                                <h4>Subject: Big Data Analytics with Hadoop and R <br> Final Project (Spring 2016)</h4>
                             </div>
                             <div class="modal-body">
-                                <p>Description comes here</p>
+                                <p class="lead">This project used R language and data mining algorithms like K-nearest neighbours
+                                  to generate Sentiment Analysis about Republican party candidates on Twitter.<br>Additional script has been written to generate a word cloud about Donald J. Trump based on that analysis.</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -101,24 +104,27 @@
                     </div>
                 </div>
 
-
-                  <!-- Donald Cloud block and project description Modal -->
+                <!-- FactsnFakes project description Modal -->
                 <div class="col-md-4">
                     <div class="proj_block">
-                        <h1 style="text-align:center"><a href="#donald-cloud" data-toggle="modal">Donald Cloud</a></h1>
+                        <h1 style="text-align:center"><a href="#factsnfakes" data-toggle="modal">Facts`n`Fakes</a></h1>
                     </div>
                 </div>
 
-                <div id="donald-cloud" class="modal fade" role="dialog">
+                <div id="factsnfakes" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                         <!-- Modal content-->
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Donald Cloud</h4>
+                                <h3 class="modal-title">Facts`n`Fakes</h3>
+                                <br>
+                                <h4>Personal Project (2012-2016)</h4>
                             </div>
                             <div class="modal-body">
-                                <p>Description comes here</p>
+                                <p class="lead">Facts`n`Fakes is a website that provides tech news, how-to guides, and other useful articles of information.</p>
+                                <p class="lead"> Facts`n`Fakes is built on WordPress framework</p>
+                                <p class="lead">Visit <a href="http://www.factsnfakes.in">Facts`n`Fakes</a></p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -127,6 +133,7 @@
 
                     </div>
                 </div>
+
 
             </div>
 
@@ -134,31 +141,7 @@
             <br>
 
             <div class="row projects">
-              <!-- FactsnFakes project description Modal -->
-              <div class="col-md-4">
-                  <div class="proj_block">
-                      <h1 style="text-align:center"><a href="#factsnfakes" data-toggle="modal">Facts`n`Fakes</a></h1>
-                  </div>
-              </div>
 
-              <div id="factsnfakes" class="modal fade" role="dialog">
-                  <div class="modal-dialog">
-                      <!-- Modal content-->
-                      <div class="modal-content">
-                          <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal">&times;</button>
-                              <h4 class="modal-title">Facts`n`Fakes</h4>
-                          </div>
-                          <div class="modal-body">
-                              <p>Description comes here</p>
-                          </div>
-                          <div class="modal-footer">
-                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                          </div>
-                      </div>
-
-                  </div>
-              </div>
 
 
                   <!-- Ping Pong block and  project description Modal -->
@@ -211,7 +194,7 @@
                             <div class="modal-body">
                                 <p class="lead">Plethysmograph is a Heart Rate Monitoring Device programmed using embedded c in 8051.</p>
                                   <p class="lead">Good News: It is a team project and my role involves programming the device.</p>
-                                  <p class="lead">Bad News: I lost the files :(</p>
+                                  <p class="lead">Bad News: I lost the files :( </p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -221,37 +204,53 @@
                     </div>
                 </div>
 
+
+                <div class="col-md-4">
+                    <div class="proj_block">
+                        <h1 style="text-align:center"><a href="#more" data-toggle="modal">Ongoing Projects</a></h1>
+                    </div>
+                </div>
+
+
+              <!-- Ongoing projects description Modal -->
+              <div id="more" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                          <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              <h3 class="modal-title">Ongoing Projects</h3>
+                              <br>
+                              <h4>These are the projects I've been currently working on.</h4>
+                          </div>
+                          <div class="modal-body">
+
+                              <ol class="lead">
+                                <li><b>IRC bot:</b> An IRC bot coded using Python programming language. Expected date of completion: Dec 2016</li>
+                                <li><b>Scraper:</b> A web scraper coded using python programming langauge. Expected date of completion: Dec 2016 </li>
+                                <li><b>Catch the Ghost:</b>A side scroller game (like mario) coded using Javascript and Phaser framework. Expected date of completion: Dec 2016</li>
+                                <li><b>Tetris:</b> A Tetris game that is coded in pure/vanilla javascript and html5 canvas api. Expected date of completion: Dec 2016</li>
+                              </ol>
+
+
+
+
+
+                          </div>
+                          <div class="modal-footer">
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          </div>
+                      </div>
+
+                  </div>
+              </div>
+
             </div>
 
 
             <br>
-            <div class="row projects">
-              <div class="col-md-4">
-                  <div class="proj_block">
-                      <h1 style="text-align:center"><a href="#more" data-toggle="modal">Ongoing Projects</a></h1>
-                  </div>
-              </div>
-            </div>
 
-            <!-- Ongoing projects description Modal -->
-            <div id="more" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Ongoing Projects</h4>
-                        </div>
-                        <div class="modal-body">
-                            <p>Description comes here</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
 
-                </div>
-            </div>
             <div class="container-fluid">
                 <hr>
             </div>
