--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!--Main -->
 
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/jquery"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
 
 </body>
