--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="container row blocks">
                     <div class="col-md-4">
                         <div class="block b2">
-                            <h1 style="text-align:center"><a href="#">Blog<span style="font-size:15px;">Under Construction</span></a></h1>
+                            <h1 style="text-align:center"><a href="https://factsfinder.me/blog">Blog</a></h1>
                         </div>
                     </div>
 
