Added link to blog

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container intro">
                 <p>holla mine own nameth is Phanindra Veera.
                   I'm a CS graduate student at Fairleigh Dickinson University.
-                  I'm a Programmer/Coder, wannabe Inventor, Future's Richest Man on Earth (Yes).
+                  I'm a coder, aspiring entrepreneur and Future's Richest Man on the Earth (Yes).
                   I'm Fairly Optimistic and also Resonably Realistic.</p>
             </div>
 
