--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
          </div>
     <!--Main -->
 
+<!-- Scripts -->
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
