--- a/projects.html
+++ b/projects.html
@@ -259,10 +259,9 @@
             <footer>
                 <center>
                     <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
-                    <p>Designed By Phanindra Veera
-                    </p>
+                    <p>Designed By Phanindra Veera</p>
+                    <a href="http://factsfinder.me/blog/contact.html">Say Hello</a>
                 </center>
-
             </footer>
         </div>
     </div>
