--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 </div>
             </center>
 
+            <div class="container-fluid">
+                <hr>
+            </div>
+
         <footer>
             <center>
                 <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
