--- a/projects.html
+++ b/projects.html
@@ -256,7 +256,7 @@
             </div>
 
             <br>
-            <footer>
+            <footer style="margin-bottom: 10px;">
                 <center>
                     <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
                     <p>Designed By Phanindra Veera</p>
