--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
             </center>
 
-            <div class="container-fluid">
+            <div class="container">
                 <hr>
             </div>
 
