added link to contact page on homepage

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
                     <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/veerasumanth"><span class="fa fa-facebook fa-2x"></span></a>
                 </div>
+
             </center>
        </header>
 
@@ -79,7 +80,7 @@
             <center>
                 <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
                 <p>Designed By Phanindra Veera</p>
-                <a href="http://factsfinder.me/blog/contact.html">Say Hello</a>
+                <a class="btn btn-default" href="http://factsfinder.me/blog/contact.html">Say Hello</a>
             </center>
         </footer>
 
