--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <div class="social-icons">
                     <a class="btn btn-social-icon btn-github" href="https://github.com/factsfinder">
-                        <span class="fa fa-github fa-2x"></span></a>
+                        <span class="fa fa-github fa-2x" alt="github"></span></a>
 
                     <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/factsfinder"><span class="fa fa-twitter fa-2x"></span></a>
 
