--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
 
                 <div class="social-icons">
                     <a class="btn btn-social-icon btn-github" href="https://github.com/factsfinder">
-                        <span class="fa fa-github fa-2x" alt="github"></span></a>
+                        <span class="fa fa-github fa-2x" title="Github"></span></a>
 
-                    <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/factsfinder"><span class="fa fa-twitter fa-2x"></span></a>
+                    <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/factsfinder"><span class="fa fa-twitter fa-2x" title="Twitter"></span></a>
 
-                    <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/phanindraveera"><span class="fa fa-linkedin fa-2x"></span></a>
+                    <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/phanindraveera"><span class="fa fa-linkedin fa-2x" title="LinkedIn"></span></a>
 
-                    <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/veerasumanth"><span class="fa fa-facebook fa-2x"></span></a>
+                    <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/veerasumanth"><span class="fa fa-facebook fa-2x" title="Facebook"></span></a>
+
+                    <a class="btn btn-default" href="http://factsfinder.me/blog/contact.html">Say Hello</a>
                 </div>
 
             </center>
@@ -79,8 +81,7 @@
         <footer>
             <center>
                 <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
-                <p>Designed By Phanindra Veera</p>
-                <a class="btn btn-default" href="http://factsfinder.me/blog/contact.html">Say Hello</a>
+                <p>Designed By Me..!</p>
             </center>
         </footer>
 
