--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/veerasumanth"><span class="fa fa-facebook fa-2x" title="Facebook"></span></a>
 
-                    <a class="btn btn-default" href="http://factsfinder.me/blog/contact.html">Say Hello</a>
+                    <a class="btn btn-default" href="http://factsfinder.me/blog/contact.html" style="font-family: 'Josefin Sans', sans-serif">Say Hello</a>
                 </div>
 
             </center>
