--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 </head>
 
@@ -48,8 +47,9 @@
             <div class="container intro">
                 <p>holla mine own nameth is Phanindra Veera.
                   I'm a CS graduate student at Fairleigh Dickinson University.
-                  I'm a coder, aspiring entrepreneur and Future's Richest Man on the Earth (Yes).
-                  I'm Fairly Optimistic and also Resonably Realistic.</p>
+                  I'm a coder(Python, Java, Full Stack), aspiring entrepreneur and Future's Richest Man on the Earth (Yes).
+                  I'm Fairly Optimistic and also Resonably Realistic.<br/>
+                  <center>Favorite Quote: <span style="font-family: Arizonia">Forget Good Be Great</span></p></center>
             </div>
 
             <center>
