Made lot of changes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <title>Phanindra Veera @ factsfinder</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -45,10 +48,9 @@
         <div class="content-main">
 
             <div class="container intro">
-                <p>holla mine own nameth is Phanindra Veera.
-                  I'm a CS graduate student at Fairleigh Dickinson University.
-                  I'm a coder(Python, Java, Full Stack), aspiring entrepreneur and Future's Richest Man on the Earth (Yes).
-                  I'm Fairly Optimistic and also Resonably Realistic.<br/>
+                <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer(Python, Java, Full Stack development), aspiring entrepreneur and Future's Richest Man on the Earth.
+                <br/>Well for now, I'm looking for a job as a developer. I can work on any technology, no restrictions whatsoever. I'm a recent graduate: Master of Science in Computer Science, from Fairleigh Dickinson University.
+                I'm also very Optimistic and also Resonably Realistic. :)
             </div>
 
             <center>
@@ -67,15 +69,14 @@
 
                     <div class="col-md-4">
                         <div class="block b4">
-                            <h1 style="text-align:center"><a href="https://drive.google.com/file/d/0B-EUZmMiISlzemJXbVYzV2hvaU0/view?usp=sharing">Resume</a></h1>
+                            <h1 style="text-align:center"><a href="https://drive.google.com/file/d/0B-EUZmMiISlzQ1RreFNjU2cyVzg/view?usp=sharing">Resume</a></h1>
                         </div>
                     </div>
                 </div>
             </center>
 
             <div class="container">
-              <center>Favorite Quote: <span style="font-family: Arizonia">Forget Good Be Great</span></p></center>
-                <hr>
+                                <hr>
             </div>
 
         <footer>
@@ -94,8 +95,9 @@
     <!--Main -->
 
 <!-- Scripts -->
+<script type="text/javascript" src="js/jquery.js"></script>
+
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
 
 </body>
