--- a/projects.html
+++ b/projects.html
@@ -6,46 +6,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Projects @ factsfinder</title>
+    <title>Phanindra Veera @ factsfinder</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+
 </head>
 
 <body>
+
     <div class="container-fluid main">
-        <center>
-            <header>
-                <h2 style="font-size: 50px;"><a href="https://factsfinder.me">Phanindra Veera</a></h2>
+
+       <header>
+           <center>
+                <h1 style="font-size:50px;"><a href="https://factsfinder.me">Phanindra Veera</a></h1>
 
                 <div class="social-icons">
                     <a class="btn btn-social-icon btn-github" href="https://github.com/factsfinder">
-                        <span class="fa fa-github fa-2x"></span></a>
+                        <span class="fa fa-github fa-2x" title="Github"></span></a>
 
-                    <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/factsfinder"><span class="fa fa-twitter fa-2x"></span></a>
+                    <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/factsfinder"><span class="fa fa-twitter fa-2x" title="Twitter"></span></a>
 
-                    <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/phanindraveera"><span class="fa fa-linkedin fa-2x"></span></a>
+                    <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/phanindraveera"><span class="fa fa-linkedin fa-2x" title="LinkedIn"></span></a>
 
-                    <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/veerasumanth"><span class="fa fa-facebook fa-2x"></span></a>
+                    <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/veerasumanth"><span class="fa fa-facebook fa-2x" title="Facebook"></span></a>
+
+                    <a class="btn btn-default" href="http://factsfinder.me/blog/contact.html" style="font-family: 'Josefin Sans', sans-serif">Say Hello</a>
                 </div>
-            </header>
+
+            </center>
+       </header>
         </center>
-        <div class="container-fluid">
+        <div class="container">
             <hr>
         </div>
 
-        <div class="container-fluid content-main">
+        <div class="container content-main">
             <center>
-                <p class="intro">Projects I've done so far</h3>
+                <p class="intro">Projects I've done so far :)</h3>
             </center>
 
             <div class="row projects">
 
+              <div class="col-md-3">
+                  <div class="proj_block">
+                  <h1 style="text-align:center"><a href="#" data-toggle="modal" data-target="#hacker-news">Hacker News Clone</a></h2>
+                  </div>
+              </div>
+
+              <div id="hacker-news" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                          <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              <h3 class="modal-title">Hcaker News Clone</h3>
+                              <br>
+                              <h4>Personal Project (January 2016)</h4>
+                          </div>
+                          <div class="modal-body">
+                              <p class="lead">This is a Hacker News Clone developed using ReactJs and Hacker News API <br><a href="https://morning-coast-81163.herokuapp.com/">Check out the demo here</a></p>
+                          </div>
+                          <div class="modal-footer">
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          </div>
+                      </div>
+
+                  </div>
+              </div>
+
               <!-- Flappy Bird blone block and project description Modal -->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="proj_block">
                     <h1 style="text-align:center"><a href="#" data-toggle="modal" data-target="#flappy-bird">Flappy Bird Clone</a></h2>
                     </div>
@@ -75,9 +110,9 @@
 
 
                 <!-- Twitter GOP Sentiment Analysis block and project description Modal -->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="proj_block">
-                        <h1 style="text-align:center"><a href="#twitter-gop" data-toggle="modal">Twitter GOP Sentiment Analysis</a></h1>
+                        <h1 style="text-align:center"><a href="#twitter-gop" data-toggle="modal">Twitter GOP</a></h1>
                     </div>
                 </div>
 
@@ -94,7 +129,7 @@
                             </div>
                             <div class="modal-body">
                                 <p class="lead">This project used R language and data mining algorithms like K-nearest neighbours
-                                  to generate Sentiment Analysis about Republican party candidates on Twitter.<br>Additional script has been written to generate a word cloud about Donald J. Trump based on that analysis.</p>
+                                  to generate Sentiment Analysis about Republican party candidates on Twitter.<br>Additional  R script is also programmed to generate a word cloud about Donald J. Trump based on that analysis.</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -104,27 +139,27 @@
                     </div>
                 </div>
 
-                <!-- FactsnFakes project description Modal -->
-                <div class="col-md-4">
+                <!-- Twitter GOP Sentiment Analysis block and project description Modal -->
+                <div class="col-md-3">
                     <div class="proj_block">
-                        <h1 style="text-align:center"><a href="#factsnfakes" data-toggle="modal">Facts`n`Fakes</a></h1>
+                        <h1 style="text-align:center"><a href="#amaze-shop" data-toggle="modal">AmazeShop</a></h1>
                     </div>
                 </div>
 
-                <div id="factsnfakes" class="modal fade" role="dialog">
+
+                <div id="amaze-shop" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                         <!-- Modal content-->
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title">Facts`n`Fakes</h3>
+                                <h3 class="modal-title">AmazeShop - Online Shopping Portal</h3>
                                 <br>
-                                <h4>Personal Project (2012-2016)</h4>
+                                <h4>Subject: Programming for the Internet <br> Final Project (Fall 2016)</h4>
                             </div>
                             <div class="modal-body">
-                                <p class="lead">Facts`n`Fakes is a website that provides tech news, how-to guides, and other useful articles of information.</p>
-                                <p class="lead"> Facts`n`Fakes is built on WordPress framework</p>
-                                <p class="lead">Visit <a href="http://www.factsnfakes.in">Facts`n`Fakes</a></p>
+                                <p class="lead">AmazeShop is an online eCommerce shopping portal. It was programmed using ASP.NET framework and C#. Also used Web technologies HTML5, JavaScript, CSS3 and SQL server to complete the project.
+                                <a href="https://github.com/factsfinder/AmazeShop">Check the Source Code on Github.</a></p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -142,28 +177,84 @@
 
             <div class="row projects">
 
+              <!-- FactsnFakes project block and description Modal -->
+              <div class="col-md-3">
+                  <div class="proj_block">
+                      <h1 style="text-align:center"><a href="#factsnfakes" data-toggle="modal">Facts`n`Fakes</a></h1>
+                  </div>
+              </div>
 
+              <div id="factsnfakes" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                          <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              <h3 class="modal-title">Facts`n`Fakes</h3>
+                              <br>
+                              <h4>Personal Project (2012-Current)</h4>
+                          </div>
+                          <div class="modal-body">
+                              <p class="lead">Facts`n`Fakes is a website that provides tech news, how-to guides, and other useful articles of information.</p>
+                              <p class="lead"> Facts`n`Fakes is built on WordPress framework</p>
+                              <p class="lead">Visit <a href="http://www.factsnfakes.in">Facts`n`Fakes</a></p>
+                          </div>
+                          <div class="modal-footer">
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          </div>
+                      </div>
+
+                  </div>
+              </div>
+
+              <!-- Plethysmograph project description Modal -->
+              <div class="col-md-3">
+                  <div class="proj_block">
+                      <h1 style="text-align:center"><a href="#plethysmograph" data-toggle="modal">Plethysmograph</a></h1>
+                  </div>
+              </div>
+
+              <div id="plethysmograph" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                          <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              <h3 class="modal-title">Plethysmograph</h3>
+                              <br>
+                              <h4>Undergraduate Project (Jan-April 2014)</h4>
+                          </div>
+                          <div class="modal-body">
+                              <p class="lead">Plethysmograph is a Heart Rate Monitoring Device programmed using Arduino Uno Board and Arduino C.</p>
+                          </div>
+                          <div class="modal-footer">
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          </div>
+                      </div>
+
+                  </div>
+              </div>
 
                   <!-- Ping Pong block and  project description Modal -->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="proj_block">
-                        <h1 style="text-align:center"><a href="#ping-pong" data-toggle="modal">Ping Pong Game</a></h1>
+                        <h1 style="text-align:center"><a href="#bowling" data-toggle="modal">Bowling Simulation</a></h1>
                       </div>
                 </div>
 
-                <div id="ping-pong" class="modal fade" role="dialog">
+                <div id="bowling" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                         <!-- Modal content-->
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title">Simple Ping Pong Game</h3>
+                                <h3 class="modal-title">Bowling Game</h3>
                                 <br>
-                                <h4>Personal Project (2016)</h4>
+                                <h4>Subject: Unix Shell programming (Fall 2016)</h4>
                             </div>
                             <div class="modal-body">
-                                <p class="lead">This is a simple Ping Pong game coded using Vanilla Javascript and HTML5 Canvas API</p>
-                                <p class="lead">View the source code on <a href="https://github.com/factsfinder/pingpong">github</a></p>
+                                <p class="lead">This is a simulation of bowling game inside a terminal or command line programmed using Shell Script (Korn Shell).</p>
+                                <p class="lead">View the source code on <a href="https://github.com/factsfinder/bowling">github</a></p>
 
                             </div>
                             <div class="modal-footer">
@@ -174,38 +265,10 @@
                     </div>
                 </div>
 
-                <!-- Plethysmograph project description Modal -->
-                <div class="col-md-4">
-                    <div class="proj_block">
-                        <h1 style="text-align:center"><a href="#plethysmograph" data-toggle="modal">Plethysmograph</a></h1>
-                    </div>
-                </div>
-
-                <div id="plethysmograph" class="modal fade" role="dialog">
-                    <div class="modal-dialog">
-                        <!-- Modal content-->
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title">Plethysmograph</h3>
-                                <br>
-                                <h4>Undergraduate Project (Jan-April 2014)</h4>
-                            </div>
-                            <div class="modal-body">
-                                <p class="lead">Plethysmograph is a Heart Rate Monitoring Device programmed using embedded c in 8051.</p>
-                                  <p class="lead">Good News: It is a team project and my role involves programming the device.</p>
-                                  <p class="lead">Bad News: I lost the files :( </p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
 
 
-                <div class="col-md-4">
+
+                <div class="col-md-3">
                     <div class="proj_block">
                         <h1 style="text-align:center"><a href="#more" data-toggle="modal">Ongoing Projects</a></h1>
                     </div>
@@ -226,10 +289,10 @@
                           <div class="modal-body">
 
                               <ol class="lead">
-                                <li><b>IRC bot:</b> An IRC bot coded using Python programming language. Expected date of completion: Dec 2016</li>
-                                <li><b>Scraper:</b> A web scraper coded using python programming langauge. Expected date of completion: Dec 2016 </li>
-                                <li><b>Catch the Ghost:</b>A side scroller game (like mario) coded using Javascript and Phaser framework. Expected date of completion: Dec 2016</li>
-                                <li><b>Tetris:</b> A Tetris game that is coded in pure/vanilla javascript and html5 canvas api. Expected date of completion: Dec 2016</li>
+                                <li><b>IRC bot:</b> An IRC bot coded using Python programming language.</li>
+                                <li><b>Scraper:</b> A web scraper coded using python programming langauge.</li>
+                                <li><b>Catch the Ghost:</b>A side scroller game (like mario) coded using Javascript and Phaser framework.</li>
+                                <li><b>Tetris:</b> A Tetris game that is coded in pure/vanilla javascript and HTML5 Canvas API.</li>
                               </ol>
 
 
@@ -256,20 +319,27 @@
             </div>
 
             <br>
-            <footer style="margin-bottom: 10px;">
+            <footer>
                 <center>
                     <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
-                    <p>Designed By Phanindra Veera</p>
-                    <a href="http://factsfinder.me/blog/contact.html">Say Hello</a>
+                    <p>Designed By Me..!</p>
                 </center>
             </footer>
-        </div>
-    </div>
 
-    <script type="text/javascript" src="js/main.js"></script>
+
+
+            </div>
+            <!--Content-Main-->
+
+             </div>
+        <!--Main -->
+
+    <!-- Scripts -->
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
 
-</body>
+        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/bootstrap.js"></script>
 
-</html>
+    </body>
+
+    </html>
