Made lot of changes

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
             <div class="container intro">
                 <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer(Python, Java, Full Stack development), aspiring entrepreneur and Future's Richest Man on the Earth.
-                <br/>Well for now, I'm looking for a job as a developer. I can work on any technology, no restrictions whatsoever. I'm a recent graduate: Master of Science in Computer Science, from Fairleigh Dickinson University.
-                I'm also very Optimistic and also Resonably Realistic. :)
+                  Well for now, I'm looking for a job as a developer. I can work on any technology, no restrictions whatsoever.</p>
             </div>
 
             <center>
@@ -76,6 +75,8 @@
             </center>
 
             <div class="container">
+              <p class="intro"> I'm a recent graduate: Master of Science in Computer Science, from Fairleigh Dickinson University.
+              I'm also very Optimistic and also Resonably Realistic. :)</p>
                                 <hr>
             </div>
 
