Removed Animate.css and added custom animations

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Phanindra Veera @ factsfinder</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/animate.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
@@ -41,15 +40,14 @@
             </center>
        </header>
 
-        <!-- Just the Header Title and Tagline -->
 
         <div class="container"><hr></div>
 
         <div class="content-main">
 
             <div class="container intro">
-                <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer(Python, Java, Full Stack development), aspiring entrepreneur and Future's Richest Man on the Earth.
-                  Well for now, I'm looking for a job as a developer. I can work on any technology, no restrictions whatsoever.</p>
+                <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer(Python, Java, Full Stack development), recent graduate: Master of Science in Computer Science, from Fairleigh Dickinson University, aspiring entrepreneur and Future's Richest Man on the Earth.
+                  Well for now, I'm looking for a job as a developer.
             </div>
 
             <center>
@@ -75,8 +73,6 @@
             </center>
 
             <div class="container">
-              <p class="intro"> I'm a recent graduate: Master of Science in Computer Science, from Fairleigh Dickinson University.
-              I'm also very Optimistic and also Resonably Realistic. :)</p>
                                 <hr>
             </div>
 
@@ -97,7 +93,6 @@
 
 <!-- Scripts -->
 <script type="text/javascript" src="js/jquery.js"></script>
-
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
 
