--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="content-main">
 
             <div class="container intro">
-                <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer(Python, Java, Full Stack development) first and a Computer Science Graduate, FDU later. I'm also an aspiring entrepreneur and Future's Richest Man on the Earth.
-                  Well for now, I'm looking for developer jobs. 
+                <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer(Python, Java, Full Stack development) at first and a Computer Science Graduate later. I'm also an aspiring entrepreneur and Future's Richest Man on the Earth.
+                  Well for now, I'm seriously looking for a developer job. 
             </div>
 
             <center>
