--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                     <div class="col-md-4">
                         <div class="block b4">
-                            <h1 style="text-align:center"><a href="https://drive.google.com/file/d/0B-EUZmMiISlzWXlXekd2S2pqbE0/view?usp=sharing">Resume</a></h1>
+                            <h1 style="text-align:center"><a href="https://docs.google.com/document/d/1eiujXIuiXYqYUt1qEm_yx4rxPcpwmFX24iQ99qU8p-Q/edit?usp=sharing">Resume</a></h1>
                         </div>
                     </div>
                 </div>
