--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <footer>
             <center>
                 <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
-                <p>Designed By Me..!</p>
+                <p>Designed and Developed by Me..!</p>
             </center>
         </footer>
 
