--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-
+    <div id="particles-js"></div>
     <div class="container-fluid main">
-
+       
        <header>
            <center>
                 <h1 style="font-size:50px;"><a href="https://factsfinder.me">Phanindra Veera</a></h1>
@@ -95,6 +95,7 @@
 <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 </body>
 
