--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="content-main">
 
             <div class="container intro">
-                <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer(Python, Java, React, Node, Django, Full Stack Development) at first and a Computer Science Graduate later. I'm also an aspiring entrepreneur and Future's Richest Man on the Earth.
-                  Well for now, I'm seriously looking for a developer job.
+                <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer at first and a Computer Science Graduate later. I mostly code in Python, JavaScript. 
+                    I'm also a big fan of React and React native. I'm also an aspiring entrepreneur and Future's Richest Man on the Earth. At present, I'm trying to build my own Jarvis like Virtual Assistant named "Lucifer".
             </div>
 
             <center>
